--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -1,14 +1,18 @@
 $txt-color: #666666;
 $white: #fff;
 $color-hover: #c3a27c;
-$black: #000000; 
- 
+$black: #000000;
+$color-main: #f5a81c;
+$color-2: #dc0505;
+$color-3: #0c0c0c;
+$color-4: #bb0001;
+$color-5: #ededed;
+$color-6: #fff4ea;
 $center: center;
 
 $w100: 100%;
-$font-main-1: 'DM Sans', sans-serif;
-$Cerebri: 'Cerebri';
- 
+$font-1: 'Kanit', sans-serif;
+$font-2: 'Cerebri';
 
 $res_1760: 1760px;
 $res_1600: 1600px;
