--- a/app/scss/component/_index.scss
+++ b/app/scss/component/_index.scss
@@ -12,3 +12,6 @@
 @forward './progress-bar';
 @forward './home'; 
 @forward './reponsive'; 
+@forward './topbar';
+@forward './extrass_class';
+@forward './spacing';
