--- a/app/scss/abstracts/_mixin.scss
+++ b/app/scss/abstracts/_mixin.scss
@@ -6,18 +6,18 @@
     justify-content: $justifyContent;
 }
 
-@mixin flex2{
+@mixin flex2 {
     display: flex;
 }
 
-@mixin  absolute (){
+@mixin absolute () {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
 }
 
-@mixin  overlay (){
+@mixin overlay () {
     position: absolute;
     left: 0;
     top: 0;
@@ -25,7 +25,7 @@
     height: $w100;
 }
 
-@mixin  transition4 (){
+@mixin transition4 () {
     -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
     -ms-transition: all 0.4s ease;
@@ -33,15 +33,15 @@
     transition: all 0.4s ease;
 }
 
-@mixin  transition3 (){
+@mixin transition3 () {
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
-} 
+}
 
-@mixin  transition2 (){
+@mixin transition2 () {
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -ms-transition: all 0.2s ease;
@@ -49,14 +49,15 @@
     transition: all 0.2s ease;
 }
 
-@mixin  translateY0 (){
+@mixin translateY0 () {
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
     transform: translateY(0);
 }
-@mixin  translateY-5 (){
+
+@mixin translateY-5 () {
     -webkit-transform: translateY(-5px);
     -moz-transform: translateY(-5px);
     -ms-transform: translateY(-5px);
@@ -64,7 +65,7 @@
     transform: translateY(-5px);
 }
 
-@mixin  transition4 (){
+@mixin transition4 () {
     -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
     -ms-transition: all 0.4s ease;
@@ -73,14 +74,23 @@
 }
 
 
-@mixin  transition5 (){
+@mixin transition5 () {
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -ms-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
-@mixin  transition8 (){
+
+@mixin transition6 () {
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
+    -ms-transition: all 0.6s ease;
+    -o-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+}
+
+@mixin transition8 () {
     -webkit-transition: all 0.8s ease;
     -moz-transition: all 0.8s ease;
     -ms-transition: all 0.8s ease;
@@ -88,14 +98,22 @@
     transition: all 0.8s ease;
 }
 
-@mixin  showshadow (){
+@mixin transition1s () {
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+@mixin showshadow () {
     padding-top: 40px;
     padding-bottom: 40px;
     margin-top: -40px;
     margin-bottom: -40px;
 }
 
-@mixin  topcenter (){
+@mixin topcenter () {
     top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -104,7 +122,7 @@
     transform: translateY(-50%);
 }
 
-@mixin  leftcenter () {
+@mixin leftcenter () {
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -113,7 +131,7 @@
     transform: translateX(-50%);
 }
 
-@mixin  center () {
+@mixin center () {
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%);
@@ -143,17 +161,19 @@
     line-height: 30px;
 }
 
-@mixin font-14{
+@mixin font-14 {
     font-family: 'Orbitron', sans-serif;
     font-size: 14px;
     line-height: 22px;
     font-weight: 700;
 }
+
 @mixin res1760 {
     @media only screen and (max-width: $res_1760) {
         @content;
     }
 }
+
 @mixin res1600 {
     @media only screen and (max-width: $res_1600) {
         @content;
@@ -183,11 +203,13 @@
         @content;
     }
 }
-@mixin res600{
+
+@mixin res600 {
     @media only screen and (max-width: $res_600) {
         @content;
     }
 }
+
 @mixin res500 {
     @media only screen and (max-width: $res_500) {
         @content;
