--- a/app/scss/component/_box.scss
+++ b/app/scss/component/_box.scss
@@ -15,3 +15,312 @@
         transition: 0.8s ease;
     }
 }
+
+.about-inner {
+    padding: 80px 215px;
+    border-radius: 30px;
+    @include flex(inherit, space-between);
+    position: relative;
+    overflow: hidden;
+
+    .icon-bg {
+        position: absolute;
+
+        &.icon_1 {
+            left: -30px;
+            bottom: -35px;
+        }
+
+        &.icon_2 {
+            right: -30px;
+            bottom: -20px;
+        }
+    }
+
+    .box {
+        text-align: center;
+        width: 25%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+
+        border-right: 1px dashed rgba(239, 239, 239, 0.2);
+
+        &:last-child {
+            border: none;
+        }
+
+        h5 {
+            line-height: 2;
+            position: relative;
+            padding-bottom: 12px;
+
+            &::before {
+                position: absolute;
+                content: "";
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: 0;
+                width: 60px;
+                height: 3px;
+                background-color: $color-main;
+            }
+        }
+
+        .inner {
+            position: relative;
+            @include flex(center, flex-start);
+            flex-direction: column;
+            top: 0;
+
+            .icon {
+                width: 96px;
+                height: 96px;
+                background-color: $color-2;
+                border-radius: 20px;
+                @include flex(center, center);
+
+                svg {
+                    width: 47px;
+                    height: 41px;
+
+                    path {
+                        fill: $white;
+                    }
+                }
+            }
+
+
+        }
+
+        .hover-effect,
+        .inner {
+            @include transition5;
+            padding: 16px;
+        }
+
+        .hover-effect {
+            position: absolute;
+            top: -100%;
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        &.active,
+        &:hover {
+            .inner {
+                top: 100%;
+            }
+
+            .hover-effect {
+                top: 0;
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    }
+}
+
+.item-box {
+    position: relative;
+    margin-bottom: 30px;
+
+    .image {
+        img {
+            border-radius: 20px;
+        }
+    }
+
+    .content {
+        top: 0;
+        left: 0;
+        padding: 40px;
+        position: absolute;
+
+        .title {
+            a:hover {
+                color: $color-4;
+            }
+        }
+    }
+
+    .link {
+        border-radius: 10px;
+        background-color: $white;
+        position: absolute;
+        width: 75px;
+        height: 75px;
+        right: 60px;
+        bottom: 25px;
+        @include flex(center, center);
+
+        svg path {
+            @include transition3;
+        }
+
+        &:hover {
+            background-color: $color-3;
+
+            svg path {
+                fill: $white;
+            }
+        }
+
+        svg {
+            width: 40px;
+            height: 40px;
+        }
+
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    &:hover {
+        .link {
+            right: 40px;
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+.product-item {
+    margin: 24px 0;
+
+    .inner {
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        border-radius: 16px;
+        padding: 40px 10px 40px 50px;
+    }
+
+    .content,
+    .image {
+        width: 100%;
+    }
+
+    .image {
+        text-align: right;
+    }
+
+    .overlay-2 {
+        position: absolute;
+        width: 758px;
+        height: 758px;
+        right: -550px;
+        top: -215px;
+        background-color: $color-4;
+        border-radius: 50%;
+        @include transition5;
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .overlay {
+        border-radius: 16px;
+        display: flex;
+        justify-content: flex-end;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        @include transition6;
+        overflow: hidden;
+        opacity: 0;
+        visibility: hidden;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .price {
+        font-family: "Cerebri-SemiBold";
+        z-index: 9;
+        position: absolute;
+        right: 45px;
+        padding: 11.5px 44px;
+        top: 0;
+        border-radius: 25px;
+        color: $white;
+        font-size: 20px;
+    }
+
+    .content {
+        position: relative;
+
+        .desc {
+            @include transition3;
+            margin-bottom: 24px;
+        }
+
+        ul {
+            margin-bottom: 32px;
+
+            li {
+                font-family: "Cerebri-SemiBold";
+                font-weight: 500;
+                position: relative;
+                padding-left: 16px;
+                font-size: 17px;
+                color: $color-3;
+                @include transition3;
+                margin-bottom: 15px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    top: 10px;
+                    left: 0;
+                    background-color: $color-main;
+                }
+
+                &:hover {
+                    color: $white;
+                }
+            }
+        }
+    }
+
+    &.active,
+    &:hover {
+        .tf-button {
+            background-color: $color-3;
+            color: $white;
+        }
+
+        ul li {
+            color: $white;
+        }
+
+        .title a {
+            color: $white;
+        }
+
+        .content {
+            .desc {
+                color: $color-5;
+            }
+        }
+
+        .overlay-2 {
+            right: -758px;
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .overlay {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
