--- a/app/scss/component/_spacing.scss
+++ b/app/scss/component/_spacing.scss
@@ -3,21 +3,46 @@
 /* TF Spacing
 -------------------------------------------------------------- */
 
-$spaceamounts: ( 0, 4, 8, 16, 20, 24, 32, 36, 40);
+$spaceamounts: (
+    0,
+    4,
+    8,
+    10,
+    15,
+    16,
+    20,
+    24,
+    25,
+    28,
+    30,
+    32,
+    36,
+    40,
+    45,
+    75
+);
 // Adjust this to include the pixel amounts you need.
 
 
-$sides: (top, bottom, left, right); 
+$sides: (
+    top,
+    bottom,
+    left,
+    right
+);
+
 // Leave this variable alone
+
+@each $side in $sides {
+    .m#{str-slice($side, 0, 1)}-auto {
+        margin-#{$side}: auto;
+    }
+}
 
 @each $space in $spaceamounts {
     @each $side in $sides {
         .m#{str-slice($side, 0, 1)}-#{$space} {
             margin-#{$side}: #{$space}px;
-        }
-
-        .m#{str-slice($side, 0, 1)}-auto {
-            margin-#{$side}: auto;
         }
 
         .p#{str-slice($side, 0, 1)}-#{$space} {
