--- a/app/scss/component/_button.scss
+++ b/app/scss/component/_button.scss
@@ -13,6 +13,15 @@
     border-radius: 30px;
     @include flex(center, center);
 
+    &.style2 {
+        background-color: $color-4;
+
+        &:hover {
+            background-color: $color-3;
+            color: $white;
+        }
+    }
+
     &:hover {
         background-color: $color-3;
         color: $white;
